--- a/XR_Project_/NodeJSServer/package.json
+++ b/XR_Project_/NodeJSServer/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "shingu-103",
+  "name": "nodejsserver",
   "version": "1.0.0",
-  "type": "commonjs",
   "description": "",
   "main": "index.js",
   "scripts": {
